--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 .fvm/
+**/locator.config.dart
+**/*.freezed.dart
+**/*.g.dart
 
 # Android related
 **/android/**/gradle-wrapper.jar
@@ -89,6 +92,7 @@ unlinked_spec.ds
 **/ios/Flutter/Flutter.framework
 **/ios/Flutter/Flutter.podspec
 **/ios/Flutter/Generated.xcconfig
+**/ios/Flutter/ephemeral
 **/ios/Flutter/app.flx
 **/ios/Flutter/app.zip
 **/ios/Flutter/.last_build_id
