--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   shared_preferences: ^2.0.17
   rxdart: ^0.27.7
   equatable: ^2.0.5
+  dio: ^5.0.0
+  dartx: ^1.1.0
+  tuple: ^2.0.1
+  package_info_plus: ^3.0.3
 
 dev_dependencies:
   bloc_test: ^9.1.1
@@ -33,7 +37,7 @@ dev_dependencies:
   build_runner: 
   freezed: ^2.3.2
   json_serializable: ^6.6.1
-
+  
 flutter:
   uses-material-design: true
   generate: true
