add readme, add sample flutter_secure_storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dartx: ^1.1.0
   tuple: ^2.0.1
   package_info_plus: ^3.0.3
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   bloc_test: ^9.1.1
