--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,3 +4,4 @@ linter:
     public_member_api_docs: false
     always_use_package_imports: false
     sort_pub_dependencies: false
+    avoid_bool_literals_in_conditional_expressions: false
