--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,3 +5,4 @@ linter:
     always_use_package_imports: false
     sort_pub_dependencies: false
     avoid_bool_literals_in_conditional_expressions: false
+    prefer_if_elements_to_conditional_expressions: false
