--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   get_it: ^7.2.0
   rxdart: ^0.27.7
+  provider: ^6.0.5
 
   # models, entities related
   equatable: ^2.0.5
