--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,16 +44,21 @@ dependencies:
   connectivity_plus: ^3.0.3
   internet_connection_checker: ^1.0.0+1
 
+  # navigation
+  auto_route: ^5.0.4
+
   # others
   package_info_plus: ^3.0.3
 
 dev_dependencies:
   bloc_test: ^9.1.1
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
   mocktail: ^0.3.0
   very_good_analysis: ^4.0.0
   injectable_generator: 
+  auto_route_generator: ^5.0.3
   build_runner: 
   freezed: ^2.3.2
   json_serializable: ^6.6.1
