--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   # others
   package_info_plus: ^3.0.3
   reactive_forms: ^14.1.0
+  flutter_screenutil: ^5.6.1
+  device_preview: ^1.1.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   bloc_test: ^9.1.1
