--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_screenutil: ^5.6.1
   device_preview: ^1.1.0
   google_fonts: ^4.0.3
+  objectbox: ^1.7.2
+  objectbox_flutter_libs: any
 
 dev_dependencies:
   bloc_test: ^9.1.1
@@ -66,6 +68,7 @@ dev_dependencies:
   build_runner: 
   freezed: ^2.3.2
   json_serializable: ^6.6.1
+  objectbox_generator: any
   
 flutter:
   uses-material-design: true
