--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,6 @@ dependencies:
   connectivity_plus: ^3.0.3
   internet_connection_checker: ^1.0.0+1
 
-  # navigation
-  auto_route: ^5.0.4
-
   # others
   package_info_plus: ^3.0.3
   reactive_forms: ^14.1.0
@@ -73,3 +70,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/
+    - assets/images/
