--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,3 +9,4 @@ linter:
     prefer_if_elements_to_conditional_expressions: false
     cascade_invocations: false
     prefer_int_literals: false
+    avoid_multiple_declarations_per_line: false
