--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_fonts: ^4.0.3
   objectbox: ^1.7.2
   objectbox_flutter_libs: any
+  circular_countdown_timer: ^0.2.3
 
 dev_dependencies:
   bloc_test: ^9.1.1
